# western

./: .gitignore  CMakeLists.txt  README.md
blender/: char_rigging.blend  cowbow_attempt2.blend  cowboy_hat1.blend  cowboy_hat1.blend1  dungeon1.blend  edit_char.blend  floor.blend  human_western.blend  human_western.blend1  sword_template.blend
psd/: animation_sheet.psd  horse_walk.psd  landscape.psd  walk.psd  walktemplate.psd
resources/: main.json
resources/characters/: player.json
resources/game/: main.json  maingame.json
resources/game/characters/: boss1.json  horse.json  player.json  thug.json
resources/game/environment/: sky.json
resources/game/items/: jackets.json
resources/game/scenes/: intro.json  scene_0.json
resources/scenes/: scene_0.json
src/: CMakeLists.txt  animation.cpp  config.h.in  main.cpp  wst_ai_character.cpp  wst_animation.cpp  wst_asset_manager.cpp  wst_cutscene.cpp  wst_environment.cpp  wst_gamescene.cpp  wst_input_action.cpp  wst_json_resource.cpp  wst_main.cpp  wst_npc.cpp  wst_player_character.cpp  wst_quest_character.cpp  wst_scene.cpp  wst_screenrenderobj.cpp  wst_stat_character.cpp  wst_staticobj.cpp  wst_unix.cpp  wst_win32.cpp  wst_worldlocation.cpp  wst_worldobj.cpp
src/include/: animation.h  config.h  wst_ai_character.h  wst_animation.h  wst_asset_manager.h  wst_cutscene.h  wst_environment.h  wst_file_trigger.h  wst_gamescene.h  wst_input_action.h  wst_json_resource.h  wst_main.h  wst_npc.h  wst_player_character.h  wst_quest_character.h  wst_scene.h  wst_screenrenderobj.h  wst_stat_character.h  wst_staticobj.h  wst_timer.h  wst_trace.h  wst_types.h  wst_worldlocation.h  wst_worldobj.h
